Projeto/Compilador/tests/cases/error/T25.pas
program T25;
var i: integer;
begin
  for i := 1 to 3 do
    i := 7;
end.
